cli/tests/snapshot/inputs/errors/record_access.ncl
# capture = 'stderr'
# command = ['eval']
({ "%{(if false then "foo" else "bar")}" = false, bar = true }).foo
